@@ -1,3 +1,7 @@
+2017-09-24 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix thread not terminated on Calculator deletion (issue #45)
+
 2017-09-23 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Fix 5/(x−y)−3/(2x−2y)=7(2x-2y)
